// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connected Components Angular Plugin component.ts full snippet, full description creation 1`] = `
Object {
  "description": "### BankAccount extends Object

#### implements
- OnInit
- OnDestroy
- OnChanges

This is a bank account component
This is line 2 description

### BankAccountHolder

#### implements
- OnInit

This is a bank account holder component",
  "lang": "markup",
  "snippet": "<!--- BankAccount examples --->
<bank-account
  account-id='{string}'
  bankName='{string}'>
</bank-account>



<!--- BankAccountHolder examples --->
<bank-account-holder>
    {content}
</bank-account-holder>",
}
`;

exports[`Connected Components Angular Plugin component.ts snippet creation 1`] = `
Object {
  "description": "### BankAccount extends Object
This is a bank account component
This is line 2 description


### BankAccountHolder
This is a bank account holder component",
  "lang": "markup",
  "snippet": "<!--- BankAccount examples --->
<!--- Possible selectors:
  - bank-account
--->
<bank-account
  account-id='{string}'
  bankName='{string}'>
</bank-account>



<!--- BankAccountHolder examples --->
<!--- Possible selectors:
  - bank-account-holder
--->
<bank-account-holder>
    {content}
</bank-account-holder>",
}
`;

exports[`Connected Components Angular Plugin componentWithDecoratorInputs.ts snippet creation 1`] = `
Object {
  "description": "### BankAccount
This is a bank account component


### BankAccountHolder
This is a bank account holder component",
  "lang": "markup",
  "snippet": "<!--- BankAccount examples --->
<!--- Possible selectors:
  - bank-account
--->
<bank-account
  account-id='{string}'
  bankName='{string}'>
</bank-account>



<!--- BankAccountHolder examples --->
<!--- Possible selectors:
  - bank-account-holder
--->
<bank-account-holder>
    {content}
</bank-account-holder>",
}
`;

exports[`Connected Components Angular Plugin componentWithFileTemplate.ts snippet creation 1`] = `
Object {
  "description": "### BankAccount
This is a bank account component


### BankAccountHolder
This is a bank account holder component",
  "lang": "markup",
  "snippet": "<!--- BankAccount examples --->
<!--- Possible selectors:
  - bank-account
--->
<bank-account
  account-id='{string}'
  bankName='{string}'>
</bank-account>



<!--- BankAccountHolder examples --->
<!--- Possible selectors:
  - bank-account-holder
--->
<bank-account-holder>
    {content}
</bank-account-holder>",
}
`;

exports[`Connected Components Angular Plugin componentWithMultiSelectors.ts full snippet, full description creation 1`] = `
Object {
  "description": "### BankAccount

This is a bank account component

### BankAccountHolder

This is a bank account holder component",
  "lang": "markup",
  "snippet": "<!--- BankAccount examples --->
<bank-account
  account-id='{string}'
  bankName='{string}'>
</bank-account>

<div
  class='account'
  account-id='{string}'
  bankName='{string}'>
</div>

<div
  type='account'
  account-id='{string}'
  bankName='{string}'>
</div>

<p
  type='account'
  class='statement'
  account-id='{string}'
  bankName='{string}'>
</p>



<!--- BankAccountHolder examples --->
<bank-account-holder>
    {content}
</bank-account-holder>",
}
`;

exports[`Connected Components Angular Plugin componentWithMultiSelectors.ts snippet creation 1`] = `
Object {
  "description": "### BankAccount
This is a bank account component


### BankAccountHolder
This is a bank account holder component",
  "lang": "markup",
  "snippet": "<!--- BankAccount examples --->
<!--- Possible selectors:
  - bank-account
  - .account
  - [type=account]
  - p.statement[type=account]
--->
<bank-account
  account-id='{string}'
  bankName='{string}'>
</bank-account>



<!--- BankAccountHolder examples --->
<!--- Possible selectors:
  - bank-account-holder
--->
<bank-account-holder>
    {content}
</bank-account-holder>",
}
`;
